# Niazip

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  Update (2019.07.24).rtf
extlibs/: CMakeLists.txt
src/: CMakeLists.txt
src/niazip/: CMakeLists.txt  file_info.h  niazip.cpp  niazip.h  niazip_helpers.cpp  niazip_helpers.h  niazip_impl.cpp  niazip_reader.cpp  niazip_reader.h  niazip_types.h  niazip_writer.cpp  niazip_writer.h
tests/: CMakeLists.txt  main.cpp  niazip_reader.t.cpp  niazip_test_helpers.h  niazip_writer.t.cpp
